Fixing horizontal overflow

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -852,11 +852,6 @@
                 max-width: 150px;
             }
 
-            a {
-                display: inline-block;
-                padding-right: 10px;
-            }
-
             p {
                 line-height: inherit;
             }
@@ -972,10 +967,10 @@
     }
 
     p {
-        @include clearfix;
         font-size: 13.5px;
         line-height: 1.6em;
         margin: 0;
+        overflow: hidden;
         white-space: pre-wrap;
         width: 100%;
         word-break: break-word;
